Changing AngieIndex.php file name to Index.php

--- a/AngieQuery.html
+++ b/AngieQuery.html
@@ -44,7 +44,7 @@ This program lets the user pick the query options for the Softball pitcher stats
             <h2 class="title">Softball Pitchers and Stats</h2>
           </div>
           <ul class="navbar">
-            <li><a class="active" href="AngieIndex.php">Home</a></li>
+            <li><a class="active" href="Index.php">Home</a></li>
             <li><a href="AngieQueryTable.php">Stats Table</a> </li>
             <li><a href="AngieQuery.html">Search Stats</a>
             <li><a href="AngieForm.html">Add Stats</a>
