--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,14 @@
+<!--/
+Angie Tracy
+Dr. Payne
+CSD 440-311A
+Server Side Scripting
+2023/09/24
+Module 10 Programming Assignment
+
+This program uses PHP to create an index file with links to all of the php files in the Softball Pitchers and Stats program.
+-->
+
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" style="height: 100%;">
@@ -6,9 +17,51 @@
   <link rel="stylesheet" type="text/css" href="TableStyle.css" />
   <link rel="stylesheet" type="text/css" href="ImageButtonStyle.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content=".5;url=https://atracy23.github.io/Softball_Pitchers_DB/Index.php">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
   <title>Server-Side Scripting</title>
 </head>
+
+<body style="height: 100%; background-image: url('http://localhost/Softball_Pitchers_DB/blue_background.jpg')">
+
+  <!--  Creating navigation bar  -->
+  <nav>
+    <div class="navbar-container">
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+      </label>
+      <div class="logo">
+        <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
+        <h2 class="title">Softball Pitchers and Stats</h2>
+      </div>
+      <ul class="navbar">
+        <li><a class="active" href="Index.php">Home</a></li>
+        <li><a href="AngieQueryTable.php">Stats Table</a> </li>
+        <li><a href="AngieQuery.html">Search Stats</a>
+        <li><a href="AngieForm.html">Add Stats</a>
+      </ul>
+    </div>
+  </nav>
+  
+    <div class="image-text-container">
+        <h3 class="text-line">Options</h3><br>
+        <ul>
+          <li><a href="AngieCreateTable.php">Create Table</a></li>
+          <li><a href="AngieDropTable.php">Drop Table</a></li>
+          <li><a href="AngieQueryTable.php">See Stats Table</a></li>
+          <li><a href="AngieQuery.html">Search for Pitcher Stats</a></li>
+          <li><a href="AngieForm.html">Add New Pitcher or Stats to Table</a></li>
+          <li><a href="AngiePDF.php" target="_blank">Create a PDF File of Table</a></li>
+        </ul>
+      </div>
+  
+  <footer>
+        <a href="http://localhost/Softball_Pitchers_DB/Index.php" style="float: right; font-weight: 400; padding: 10px; color:darkblue; text-decoration: underline;"><i>Back to Home</i></a>
+        <a href="http://localhost/Softball_Pitchers_DB" style="float: right; font-weight: 400; padding: 10px; color:darkblue; text-decoration: underline;"><i>Back to Softball Index</i></a>
+        <p style="padding: 10px;">&#169; 2023 Tracy</p>
+  </footer>
+
+</body>
+</html>
