Adding new index.html file

--- a/Index.html
+++ b/Index.html
@@ -25,25 +25,25 @@ This program uses PHP to create an index file with links to all of the php files
 
 <body style="height: 100%; background-image: url('http://localhost/Softball_Pitchers_DB/blue_background.jpg')">
 
-  <!--  Creating navigation bar   -->
-  <nav>
-    <div class="navbar-container">
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-          <i class="fas fa-bars"></i>
-      </label>
-      <div class="logo">
-        <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
-        <h2 class="title">Softball Pitchers and Stats</h2>
-      </div>
-      <ul class="navbar">
-        <li><a class="active" href="Index.php">Home</a></li>
-        <li><a href="AngieQueryTable.php">Stats Table</a> </li>
-        <li><a href="AngieQuery.html">Search Stats</a>
-        <li><a href="AngieForm.html">Add Stats</a>
-      </ul>
+<!--  Creating navigation bar  -->>
+<nav>
+  <div class="navbar-container">
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+    </label>
+    <div class="logo">
+      <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
+      <h2 class="title">Softball Pitchers and Stats</h2>
     </div>
-  </nav>
+    <ul class="navbar">
+      <li><a class="active" href="Index.php">Home</a></li>
+      <li><a href="AngieQueryTable.php">Stats Table</a> </li>
+      <li><a href="AngieQuery.html">Search Stats</a>
+      <li><a href="AngieForm.html">Add Stats</a>
+    </ul>
+  </div>
+</nav>
   
     <div class="image-text-container">
         <h3 class="text-line">Options</h3><br>
