--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ This program uses PHP to create an index file with links to all of the php files
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" style="height: 100%;">
 <head>
   <link rel="stylesheet" type="text/css" href="LandingPageStyle.css" />
+  <link href="NavBarStyle.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="TableStyle.css" />
   <link rel="stylesheet" type="text/css" href="ImageButtonStyle.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
