Adding new style sheet link to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ This program uses PHP to create an index file with links to all of the php files
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
   <title>Server-Side Scripting</title>
 </head>
