--- a/index.html
+++ b/index.html
@@ -13,39 +13,44 @@ This program uses PHP to create an index file with links to all of the php files
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" style="height: 100%;">
 <head>
-  <link rel="stylesheet" type="text/css" href="LandingPageStyle.css" />
-  <link href="NavBarStyle.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="TableStyle.css" />
-  <link rel="stylesheet" type="text/css" href="ImageButtonStyle.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="LandingPageStyle.css" />
+    <link rel="stylesheet" type="text/css" href="TableStyle.css" />
+    <link rel="stylesheet" type="text/css" href="ImageButtonStyle.css" />
+    <link rel="stylesheet" type="text/css" href="NavBarStyle.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
-  <title>Server-Side Scripting</title>
+    <title>Server-Side Scripting</title>
+    <script>
+        function toggle(source){
+            checkboxes=document.getElementsByName('col1', 'col2', 'col3', 'col4', 'col5', 'col6', 'col7', 'col8');
+            for(var i = 0; i < checkboxes.length; i++){
+                checkboxes[i].checked = source.checked;
+            }
+        }
+    </script>    
 </head>
 
-<body style="height: 100%; background-image: url('http://localhost/Softball_Pitchers_DB/blue_background.jpg')">
-
-<!--  Creating navigation bar  -->
-<nav>
-    <div class="navbar-container">
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-          <i class="fas fa-bars"></i>
-      </label>
-      <div class="logo">
-        <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
-        <h2 class="title">Softball Pitchers and Stats</h2>
-      </div>
-      <ul class="navbar">
-        <li><a class="active" href="Index.php">Home</a></li>
-        <li><a href="AngieQueryTable.php">Stats Table</a> </li>
-        <li><a href="AngieQuery.html">Search Stats</a>
-        <li><a href="AngieForm.html">Add Stats</a>
-      </ul>
-    </div>
-  </nav>
+<body style="height: 100%;">
+    <nav>
+        <div class="navbar-container">
+          <input type="checkbox" id="check">
+          <label for="check" class="checkbtn">
+              <i class="fas fa-bars"></i>
+          </label>
+          <div class="logo">
+            <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
+            <h2 class="title">Softball Pitchers and Stats</h2>
+          </div>
+          <ul class="navbar">
+            <li><a class="active" href="Index.php">Home</a></li>
+            <li><a href="AngieQueryTable.php">Stats Table</a> </li>
+            <li><a href="AngieQuery.html">Search Stats</a>
+            <li><a href="AngieForm.html">Add Stats</a>
+          </ul>
+        </div>
+    </nav>
   
     <div class="image-text-container">
         <h3 class="text-line">Options</h3><br>
