Changes to background image on index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ This program uses PHP to create an index file with links to all of the php files
     </script>    
 </head>
 
-<body style="height: 100%;">
+<body style="height: 100%; background-image: url(http://localhost/Softball_Pitchers_DB/blue_background.jpg);">
     <nav>
         <div class="navbar-container">
           <input type="checkbox" id="check">
