--- a/AngieQuery.html
+++ b/AngieQuery.html
@@ -40,7 +40,7 @@ This program lets the user pick the query options for the Softball pitcher stats
               <i class="fas fa-bars"></i>
           </label>
           <div class="logo">
-            <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
+            <img src="logo.jpg" alt="Logo">
             <h2 class="title">Softball Pitchers and Stats</h2>
           </div>
           <ul class="navbar">
