--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ This program uses PHP to create an index file with links to all of the php files
     </script>    
 </head>
 
-<body style="height: 100%; background-image: url(http://localhost/Softball_Pitchers_DB/blue_background.jpg);">
+<body style="height: 100%;">
     <nav>
         <div class="navbar-container">
           <input type="checkbox" id="check">
@@ -40,7 +40,7 @@ This program uses PHP to create an index file with links to all of the php files
               <i class="fas fa-bars"></i>
           </label>
           <div class="logo">
-            <img src="http://localhost/Softball_Pitchers_DB/logo.jpg" alt="Logo">
+            <img src="logo.jpg" alt="Logo">
             <h2 class="title">Softball Pitchers and Stats</h2>
           </div>
           <ul class="navbar">
